no pants required

--- a/output/index.html
+++ b/output/index.html
@@ -117,7 +117,7 @@
     <div class="row">
       <div class="col-lg-4">
         <span class="fa-stack fa-5x">
-          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Actually Prevent Downtime?</h2>
@@ -135,7 +135,7 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <span class="fa-stack fa-5x">
-          <i class="fa fa-windows fa-2x"></i>
+          <i class="fa fa-windows fa-2x colorOfWindows"></i>
         </span>
         <h2>Sleep Better Knowing Your Covered</h2>
         <p>
@@ -157,8 +157,8 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <span class="fa-stack fa-5x">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-ambulance fa-stack-1x"></i>
+          <i class="fa fa-circle-thin fa-stack-2x colorOfJoesPants"></i>
+          <i class="fa fa-ambulance fa-stack-1x colorOfJoesPants"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
         <p>
@@ -198,6 +198,14 @@
         <img class="featurette-image img-responsive imgShadow" src="/images/easyCommandLine.png" alt="Generic placeholder image">
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4">
+        <p>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+        </p>
+      </div>
+    </div>
+
 
     <hr class="featurette-divider">
 
@@ -214,6 +222,9 @@
           <span><i class="fa fa-check-circle-o fa-3x green"></i> Unusual Memory and CPU Utilization</span><br/>
           <span><i class="fa fa-check-circle-o fa-3x green"></i> and MORE!</span><br/>
         </p>
+        <p>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+        </p>
       </div>
     </div>
 
@@ -227,8 +238,15 @@
 
                 </h2>
         <p class="lead">
-          more words.
+          <span>No extra servers required.</span><br />
+          <span>No PhD required.</span><br />
+          <span>No pants required (although Joe recommends the pants).</span><br />
         </p>
+
+        <p>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+        </p>
+
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
