--- a/source/index.html
+++ b/source/index.html
@@ -185,13 +185,15 @@
 
     <div class="row featurette">
       <div class="col-md-12">
-        <h2 class="featurette-heading">Free Trial With <span class="text-muted">Amazingly Fast Install</span></h2>
+        <h2 class="featurette-heading">Free trial with <span class="text-muted">amazingly fast install</span></h2>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <p class="lead">
-          No gigabyte downloads.  No complicated configurations.  One simple command and you're running in less than a minute.
+          No gigabyte downloads.
+          No complicated configurations.
+          One simple command and you're running in less than a minute.
         </p>
       </div>
       <div class="col-md-8">
@@ -234,7 +236,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">No additional infrastructure
 
-                    <span class="text-muted">to use Winsitter</span>
+                    <span class="text-muted">for monitoring</span>
 
                 </h2>
         <p class="lead">
@@ -294,7 +296,7 @@
           <br>
           <p>
             Our mascott, and always-dilligent alert robot.
-            Likes"Ship It" squirrels.
+            Likes "Ship It" squirrels.
             Dreams of being a real boy.
           </p>
           <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
