right-aligned images now flow better. building svg test

--- a/source/index.html
+++ b/source/index.html
@@ -208,7 +208,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-8 col-md-push-4">
+        <img class="featurette-image img-responsive imgShadow" src="/images/easyCommandLine.png" alt="Generic placeholder image">
+        <br />
+      </div>
+      <div class="col-md-4 col-md-pull-8">
         <p class="lead">
           No gigabyte downloads.
           No complicated configurations.
@@ -221,9 +225,6 @@
           to you when there are current issues or potental ones. You get to
           do more fun stuff with all your new free time!
         </p>
-      </div>
-      <div class="col-md-8">
-        <img class="featurette-image img-responsive imgShadow" src="/images/easyCommandLine.png" alt="Generic placeholder image">
       </div>
     </div>
     <div class="row">
@@ -259,12 +260,15 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">No additional infrastructure needed
-
-                    <span class="text-muted"> for monitoring</span>
-
-                </h2>
+      <div class="col-md-5 col-md-push-7">
+        <!-- <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image"> -->
+          <span class="fa-stack fa-featurette">
+           <i class="fa fa-building fa-stack-1x"></i>
+           <i class="fa fa-ban fa-stack-2x text-danger"></i>
+          </span>
+      </div>
+      <div class="col-md-7 col-md-pull-5">
+        <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2>
         <p class="lead">
           We created Winsitter in a way that removes the complexity of setting up
           monitoring and mobile alerts. Anyone can signup,
@@ -279,9 +283,6 @@
           <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
         </p>
 
-      </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
       </div>
     </div>
 
