removed smart pants comment per ryan

--- a/source/index.html
+++ b/source/index.html
@@ -153,7 +153,7 @@
           <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
         </span>
-        <h2>Actually Prevent Downtime?</h2>
+        <h2>Prevent Downtime</h2>
         <p>
           Yep. We alert you of many conditions before they become an outage.
         </p>
@@ -218,13 +218,13 @@
           No complicated configurations.
           One simple command and you're running in less than a minute.
         </p>
-        <p>
+        <!-- <p>
           <i class="fa fa-gears fa-4x colorOfWindows"></i>
         </p>
         <p class="lead">Our smarty-smart robots do all the analysis and only report back
           to you when there are current issues or potental ones. You get to
           do more fun stuff with all your new free time!
-        </p>
+        </p> -->
       </div>
     </div>
     <div class="row">
