more copy adjustments

--- a/source/index.html
+++ b/source/index.html
@@ -126,7 +126,7 @@
     <div class="container" id="header_inner">
       <div class="row">
         <div class="col-md-6">
-          <h1>Simple, comphrensive Windows monitoring in minutes.</h1>
+          <h1>Simple Windows Server Monitoring</h1>
           <h2>Relax! Winsitter is here to help.</h2>
 
           <br />
@@ -185,8 +185,7 @@
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
         <p>
-          If you are able to install our tiny agent on Windows, then you can
-          start monitoring within minutes.
+          Install our tiny agent on your Windows Server and start monitoring within minutes.
         </p>
         <p>
           <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
@@ -214,8 +213,8 @@
       </div>
       <div class="col-md-4 col-md-pull-8">
         <p class="lead">
-          No gigabyte downloads.
-          No complicated configurations.
+          No gigabyte downloads. <br />
+          No complicated configurations.<br />
           One simple command and you're running in less than a minute.
         </p>
         <!-- <p>
