removed images (per bbiz reccomendation).  adjusted flow

--- a/source/index.html
+++ b/source/index.html
@@ -157,9 +157,9 @@
         <p>
           Yep. We alert you of many conditions before they become an outage.
         </p>
-        <p>
+        <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p>
+        </p> -->
 
       </div>
       <!-- /.col-lg-4 -->
@@ -172,9 +172,9 @@
           We love Windows. But, it’s still too difficult for busy
           admins to get notified of common every-day server issues. We solve that for you.
         </p>
-        <p>
+        <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p>
+        </p> -->
 
       </div>
       <!-- /.col-lg-4 -->
@@ -187,9 +187,9 @@
         <p>
           Install our tiny agent on your Windows Server and start monitoring within minutes.
         </p>
-        <p>
+        <!-- <p>
           <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p>
+        </p> -->
 
       </div>
       <!-- /.col-lg-4 -->
@@ -201,17 +201,18 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <!-- <div class="row featurette">
       <div class="col-md-12">
         <h2 class="featurette-heading">Free trial with <span class="text-muted">amazingly fast install</span></h2>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8 col-md-push-4">
+    </div> -->
+    <div class="row featurette">
+      <div class="col-md-7 col-md-push-5">
+        <h2 class="featurette-heading">Free trial with <span class="text-muted">amazingly fast install</span></h2>
+      </div>
+      <div class="col-md-5 col-md-pull-7">
         <img class="featurette-image img-responsive imgShadow" src="/images/easyCommandLine.png" alt="Generic placeholder image">
         <br />
-      </div>
-      <div class="col-md-4 col-md-pull-8">
         <p class="lead">
           No gigabyte downloads. <br />
           No complicated configurations.<br />
@@ -238,11 +239,13 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-5">
+      <!-- <div class="col-md-5">
         <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
-      </div>
+      </div> -->
       <div class="col-md-7">
         <h2 class="featurette-heading">Ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
+      </div>
+      <div class="col-md-5">
         <p class="lead" id="featureCheckList">
           <span><i class="fa fa-check-circle-o fa-2x green"></i> Heartbeat detection</span><br/>
           <span><i class="fa fa-check-circle-o fa-2x green"></i> SSL Expiration</span><br/>
@@ -259,15 +262,18 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-5 col-md-push-7">
-        <!-- <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image"> -->
+      <!-- <div class="col-md-5 col-md-push-7">
+        <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
           <span class="fa-stack fa-featurette">
            <i class="fa fa-building fa-stack-1x"></i>
            <i class="fa fa-ban fa-stack-2x text-danger"></i>
           </span>
+      </div> -->
+      <div class="col-md-5 col-md-push-7">
+        <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2>
       </div>
       <div class="col-md-7 col-md-pull-5">
-        <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2>
+        <!-- <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2> -->
         <p class="lead">
           We created Winsitter in a way that removes the complexity of setting up
           monitoring and mobile alerts. Anyone can signup,
