--- a/source/index.html
+++ b/source/index.html
@@ -280,8 +280,8 @@
           easily install the agent, and sleep better knowing they’ll be
           notified of issues.<br />
           <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No extra servers required.</span><br />
+          <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> Automatically updates.</span><br />
           <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No PhD required.</span><br />
-          <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No pants required (although Joe recommends the pants).</span><br />
         </p>
 
         <p>
