--- a/source/index.html
+++ b/source/index.html
@@ -154,9 +154,10 @@
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Prevent Downtime</h2>
-        <p>
-          Yep. We alert you of many conditions before they become an outage.
-        </p>
+        <blockquote>
+          <p>Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process.</p>
+          <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
+        </blockquote>
         <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
@@ -167,11 +168,9 @@
         <span class="fa-stack fa-5x">
           <i class="fa fa-windows fa-2x colorOfWindows"></i>
         </span>
-        <h2>Sleep Better Knowing Your Covered</h2>
-        <p>
-          We love Windows. But, it’s still too difficult for busy
-          admins to get notified of common every-day server issues. We solve that for you.
-        </p>
+        <h2>Sleep Better Knowing You're Covered</h2>
+        <p class="lead">Imagine you're at home, enjoying dinner with your family and the support phone rings.  The CEO of the company tells you that he is not able to send any email.</p>
+        <p class="lead">Come to discover, one of the certificates on the mail server expired.  <b>Winsitter could have alerted you a month in advance</b> and prevented a late night email from the boss.</p>
         <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
@@ -184,7 +183,7 @@
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
-        <p>
+        <p class="lead">
           Install our tiny agent on your Windows Server and start monitoring within minutes.
         </p>
         <!-- <p>
