--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,7 @@
   <title>Winsitter | Babysit Your Windows Servers: Monitor Onsite, Hosted, and Cloud In Only 5 Minutes</title>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 <!-- Font AWESOME YO! -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -30,7 +27,7 @@
     <![endif]-->
 
   <!-- Custom styles for this template -->
-  <link href="landing.css" rel="stylesheet">
+  <link href="css/landing.css" rel="stylesheet">
 </head>
 
 <head>
@@ -195,6 +192,16 @@
     </div>
     <!-- /.row -->
 
+    <div class="container marketing" id="details">
+      <div class="row">
+        <div class="col-lg-4">
+          <blockquote class="twitter-tweet" lang="en"><p>New <a href="https://twitter.com/Winsitter">@Winsitter</a> is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added.</p>&mdash; Grant Goodart (@grantg81) <a href="https://twitter.com/grantg81/status/434552335423905794">February 15, 2014</a></blockquote>
+        </div>
+      </div>
+    </div>
+
+
+
 
     <!-- START THE FEATURETTES -->
 
@@ -358,10 +365,11 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  
   <script>
     ! function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
